# RRGA

./: .env.example  .gitignore  README.md  docker-compose.yml  package-lock.json  package.json  render.yaml
apps/web/: Dockerfile  next.config.ts  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/app/(intelligence)/alerts/: page.tsx
apps/web/src/components/: alerts-center.tsx  context-dock.tsx  evidence-card.tsx  explorer-workspace.tsx  hero-lookup.tsx  intelligence-summary-card.tsx  lookup-dock.tsx  lookup-workspace.tsx  marketing-nav.tsx  regulatory-graph.tsx  shell-frame.tsx  source-constellation-shell.tsx  source-constellation.tsx  status-badge.tsx  trust-legend.tsx
apps/web/src/lib/: api.ts  format.ts  intelligence.ts
apps/web/src/types/: api.ts
docs/: deployment-vercel-render-supabase.md  product-messaging.md
services/api/: Dockerfile  alembic.ini  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 20260413_0001_initial.py
services/api/app/: __init__.py  cli.py  main.py
services/api/app/api/routes/: public.py
services/api/app/core/: config.py
services/api/app/db/: bootstrap.py  models.py  session.py
services/api/app/ingest/: pipeline.py  storage.py
services/api/app/ingest/sources/: coingecko.py  esma.py  etherscan.py  ofac.py
services/api/app/matching/: resolution.py
services/api/app/schemas/: api.py
services/api/app/services/: alerts.py  auth.py  catalog.py
services/api/app/tests/: test_address_resolution.py  test_esma_helpers.py  test_matching.py  test_ofac_helpers.py
(+10 files in other folders)
